--- a/hep-th-9403137v1/9403137.tex
+++ b/hep-th-9403137v1/9403137.tex
@@ -18,6 +18,8 @@
 \input jnl
 \input epsf
 \tolerance=10000
+
+
 %\equationfile
 %\referencefile
 
@@ -33,7 +35,6 @@
 %\def\Eqs#1{Eqs.~\(#1)}                  %       ditto
 %\def\eq#1{eq.~\(#1)}
 %\def\eqs#1{eqs.~\(#1)}
-
 
 \def\eg{{\it e.g.,\ }}
 \def\ie{{\it i.e.,\ }}
@@ -86,7 +87,7 @@
     \parskip=8pt plus 3pt\everypar{\hangindent=\parindent}}
 \def\abs{
          \vskip 3pt plus 0.3fill\beginparmode
-         \doublespace ABSTRACT:\ }
+          ABSTRACT:\ }
 \def\refind
 {\head {\quad}
 \beginparmode
@@ -111,7 +112,9 @@
 \def\cH{{\cal H}}
 \def\cD{{\cal D}}
 
-{\hbox to\hsize{\tenpoint \baselineskip=12pt
+\hsize=6.3in
+
+{\hbox to\hsize{ \baselineskip=12pt
         \hfil\vtop{
         \hbox{\strut CALT-68-1918}
 %       \hbox{\strut **SB Preprint No?**}
@@ -136,6 +139,8 @@ and shown to be valid under suitable conditions. It is also
 shown that, in this model, a black hole can consume an
 arbitrarily large amount of information.}
 \endpage
+
+\body
 
 \head{I. Introduction}
 
@@ -476,7 +481,7 @@ $$
 \part_+\part_-\rho
 +e^{-2\phi}(\la^2e^{2\rho}-4\part_+\phi\part_-\phi)
 +{1\over2}\sum^N_{i=1}\part_+f_i\part_-f_i\Bigg]~,\cr
-&S_{\rm c.t.}= -{N\over 12\pi}\int
+S_{\rm c.t.}&= -{N\over 12\pi}\int
 d^2x~\phi\partial_+\partial_-\rho~,\quad\quad
 S_{\rm Liouville}= -{N\over 12\pi}\int d^2x~\partial_+\rho\partial_-\rho~.\cr}
 \eqno(conformal_gauge_actions)
