--- a/hep-th-9403137v1/jnl.tex
+++ b/hep-th-9403137v1/jnl.tex
@@ -25,7 +25,7 @@
 
 %  Define \...point macros to change fonts and spacings consistently
 
-\def\twelvepoint{\normalbaselineskip=12.4pt
+\def\twelvepoint{\normalbaselineskip=14.5pt
   \abovedisplayskip 12.4pt plus 3pt minus 9pt
   \belowdisplayskip 12.4pt plus 3pt minus 9pt
   \abovedisplayshortskip 0pt plus 3pt
@@ -87,8 +87,8 @@
   \multiply\baselineskip by 4 \divide\baselineskip by 3}
 \def\oneandahalfspace{\baselineskip=\normalbaselineskip
   \multiply\baselineskip by 3 \divide\baselineskip by 2}
-\def\doublespace{\baselineskip=\normalbaselineskip \multiply\baselineskip by 2}
-\def\triplespace{\baselineskip=\normalbaselineskip \multiply\baselineskip by 3}
+\def\doublespace{\baselineskip=\normalbaselineskip}
+\def\triplespace{\baselineskip=\normalbaselineskip}
 \newcount\firstpageno
 \firstpageno=2
 \footline={\ifnum\pageno<\firstpageno{\hfil}%
@@ -109,6 +109,7 @@
   July\or August\or September\or October\or November\or December\fi
   \qquad, \number\year)}}
 
+\leftskip=0pt
 %%
 %%      Page layout, margins, font and spacing (feel free to change)
 %%
@@ -117,9 +118,11 @@
 %\hoffset=1truein
 \vsize=8.9truein
 %\voffset=1truein
-\parskip=\medskipamount
+\parskip=0pt
+\hoffset=0pt
+
 \twelvepoint            % selects twelvepoint fonts (cf. \tenpoint)
-\doublespace            % selects double spacing for main part of paper (cf.
+            % selects double spacing for main part of paper (cf.
                         %       \singlespace, \oneandahalfspace)
 \overfullrule=0pt       % delete the nasty little black boxes for overfull box
 
