--- a/hep-th-9403137v1/9403137.tex
+++ b/hep-th-9403137v1/9403137.tex
@@ -723,7 +723,7 @@ But observers inside the global event horizon are inevitably drawn to the
 strongly-coupled region where semiclassical methods are inapplicable.
 
 \midinsert
-\epsfysize=5in
+\epsfysize=3in
 \centerline{ \epsfbox{f1a.eps}}
 \bigskip
 \centerline{FIGURE 1 (a).}
@@ -831,7 +831,7 @@ us to obtain results that are insensitive to any ambiguities concerning the
 proper choice of the boundary conditions satisfied by $\Omega$.
 
 \midinsert
-\epsfysize=5in
+\epsfysize=3in
 \centerline{ \epsfbox{f1b.eps}}
 \bigskip
 \centerline{FIGURE 1 (b).}
@@ -934,7 +934,7 @@ where the region $R$ is the finite interval $U_1\le U\le U_2$ rather than the
 half line $U<0$.
 
 \midinsert
-\epsfysize=5in
+\epsfysize=3in
 \centerline{ \epsfbox{f2.eps}}
 \bigskip
 \centerline{FIGURE 2.}
@@ -1293,7 +1293,7 @@ consider the state that contains no (right-moving) quanta that are positive
 frequency with respect to the coordinate $\hat U$.  The same reasoning that we
 used above for the Minkowski vacuum applies just as well to this case.  Thus,
 if the size of the interval $[\hat U_1,\hat U_2]$ is small compared to the
-infrared cutoff, the fine-grained entropy is again given by\footnote{*}{We are
+infrared cutoff, the fine-grained entropy is again given by\footnote{$^\dagger$}{We are
 again neglecting the (infrared sensitive) contribution due to the mode that is
 constant in the interval.  The contribution of this mode to the entropy must be
 considered separately.}
@@ -1339,7 +1339,7 @@ and left-moving modes is boost-invariant.  This quantity is just (the square
 of) a proper length measured on the slice $\Sigma$.
 
 \midinsert
-\epsfysize=5in
+\epsfysize=3in
 \centerline{ \epsfbox{f3.eps}}
 \bigskip
 \centerline{FIGURE 3.}
@@ -1435,7 +1435,7 @@ coordinate.  Then we may define a $\hat U$ coordinate by demanding $\hat U=\hat
 V$ at the boundary, the position of the mirror.
 
 \midinsert
-\epsfysize=5in
+\epsfysize=3in
 \centerline{ \epsfbox{f4.eps}}
 \bigskip
 \centerline{FIGURE 4.}
@@ -1471,7 +1471,7 @@ V< {\hat U}_1$ and ${\hat V}_1<\hat V< {\hat V}_2$.  (But see the caveat
 below.)
 
 \midinsert
-\epsfysize=5in
+\epsfysize=3in
 \centerline{ \epsfbox{f5a.eps}}
 \bigskip
 \centerline{FIGURE 5 (a).}
@@ -1526,7 +1526,7 @@ here $\hat V_B$ is defined as the value of $\hat V$ at the point on the
 boundary that is contained in a null line through $P$, as shown in Fig.~5b.
 
 \midinsert
-\epsfysize=5in
+\epsfysize=3in
 \centerline{ \epsfbox{f5b.eps}}
 \bigskip
 \centerline{FIGURE 5 (b).}
@@ -1625,7 +1625,7 @@ may choose the local Lorentz frame at $P$ so that
 $\delta_R=\delta_L\equiv\delta$.
 
 \midinsert
-\epsfysize=5in
+\epsfysize=3in
 \centerline{ \epsfbox{f6.eps}}
 \bigskip
 \centerline{FIGURE 6.}
