--- a/1908.07068/psu.tex
+++ b/1908.07068/psu.tex
@@ -275,31 +275,27 @@ Neumann algebra}
 \pagenumbering{arabic} \setlength{\unitlength}{1cm}\cleardoublepage
 \date\nodate
 \begin{center}
-\begin{huge}
+\begin{large}
 {\bf Randomness? What randomness?}
-\end{huge}
+\end{large}
 \bigskip
 
 \bigskip
 
 \renewcommand{\thefootnote}{\alph{footnote}}
-\begin{Large}
  Klaas Landsman\footnote{Department of Mathematics, 
 Institute for Mathematics, Astrophysics, and Particle Physics (IMAPP), Faculty of Science, Radboud University, Nijmegen, The Netherlands, and Dutch Institute for Emergent Phenomena (DIEP), \texttt{www.d-iep.org}.
 Email:
 \texttt{landsman@math.ru.nl}.}
-\end{Large}
 \bigskip
 
 
-\begin{large}
 \emph{Dedicated to Gerard 't Hooft, on the 20th anniversary of his Nobel Prize}\footnote{This paper is an extended version of my talk on July 11th, 2019 at the conference \emph{From Weak Force to Black Hole Thermodynamics and Beyond} in Utrecht in honour of Gerard 't Hooft. I am indebted to him,  Jeremy Butterfield,  Sean Gryb, Ronnie Hermens, Ted Jacobson, Jonas Kamminga, Bryan Roberts, Carlo Rovelli, Bas Terwijn,  Jos Uffink,  Noson Yanofsky, and especially Guido Bacciagaluppi and Cristian Calude for (often contradictory) comments and questions, which have led to numerous  insights and improvements.  }
-\end{large}
 \end{center}
 \bigskip
 
  \begin{abstract} 
-\noindent 
+\noindent \small
 This is a review of the issue of randomness in quantum mechanics, with special emphasis on its ambiguity; for example, randomness has different antipodal relationships to  determinism, computability, and compressibility. Following a (Wittgensteinian) philosophical discussion of randomness in general, I 
  argue that deterministic interpretations of quantum mechanics (like Bohmian mechanics or 't Hooft's Cellular Automaton interpretation) are strictly speaking incompatible with the Born rule.  
 I also stress the role of outliers, i.e.\ measurement outcomes that are \emph{not} 1-random. Although these occur with low (or even zero) probability, their very existence implies  that the no-signaling principle used in proofs of randomness of outcomes of quantum-mechanical measurements (and of the safety of quantum cryptography) should be reinterpreted statistically, like the second law of thermodynamics. In three appendices I 
