--- a/1908.07068/psu.tex
+++ b/1908.07068/psu.tex
@@ -346,8 +346,11 @@ Though he did not mention it himself, randomness seems a prime example of a phen
  \begin{itemize}
 \item To begin with, in Aristotle's famous example of a man who goes to the market and  walks into his debtor, the randomness of the encounter derives from the fact that the man did \emph{not} go the the market in order to meet his debtor (but instead went there to buy food). Similarly for the man who digs a hole in his garden to plant a tree and finds a treasure. Even the birth of female babies (and certain other `chance substances' for which he literally uses the Greek word for `monsters') was identified by The Philosopher  as a \emph{failure} of purpose in Nature. Thus what actually happened in all these examples was accidental because (as we would say it) it was \emph{not} intended, or, in Aristotelian parlance, because there was \emph{no} final cause. By the same token, Aristotle found the atomistic cosmos of Democritus ``random" because it was purposeless,  ridiculing him for making the cosmic order a product of chance. 
 \item  In contrast,  half a century later Epicurus found the atomic world not random at all and introduced randomness through the \emph{swerve}, immortalized by Lucretius:
-\begin{quote}\begin{small}
-When the atoms are traveling straight down through empty space by their own weight, at quite indeterminate times and places they swerve ever so little from their course, just so much that you can call it a change of direction. If it were not for this swerve, everything would fall downwards like raindrops through the abyss of space. No collision would take place and no impact of atom on atom would be created. Thus nature would never have created anything. (Lucretius, \emph{De Rerum Natura}, Book II).\footnote{ Lucretius (1951), p.\ 66.  See also Greenblatt (2011) for the thrilling rediscovery of \emph{De Rerum Natura}.} \end{small}
+\begin{quote}
+\small
+
+When the atoms are traveling straight down through empty space by their own weight, at quite indeterminate times and places they swerve ever so little from their course, just so much that you can call it a change of direction. If it were not for this swerve, everything would fall downwards like raindrops through the abyss of space. No collision would take place and no impact of atom on atom would be created. Thus nature would never have created anything. (Lucretius, \emph{De Rerum Natura}, Book II).\footnote{ Lucretius (1951), p.\ 66.  See also Greenblatt (2011) for the thrilling rediscovery of \emph{De Rerum Natura}.}
+
 \end{quote} 
 This was, so to speak, the first complaint against determinism (the goal of Epicurus/Lucretius was to make room for free will in a world otherwise seen as effectively dead because of the everlasting sequence of cause and effect), and indeed, in the context of our analysis, the key point is that the swerve is random because it is \emph{indeterminate}, or because the atoms \emph{depart} from their natural straight course. 
 \item Neither of these classical meanings is at all  identical with the dominant usage from medieval times to the early 20th century, which was exemplified by Spinoza, who  claimed that not only miracles, but also circumstances that have concurred by chance are reducible to \emph{ignorance of the true causes of phenomena}, for which ultimately the will of God (`the sanctuary of ignorance') is invoked as a placeholder.\footnote{See \emph{Ethics}, Part I, Appendix.} 
@@ -417,11 +420,13 @@ it will be time, I think, to doubt the absolute truth of the principle of univer
  This partly paved the way for the claim of irreducible randomness in \qm, although the influence of population studies and biology on intrinsic developments in physics should perhaps not be overestimated. However, the insight that probability and statistics gave rise to their own laws (as opposed to the fear that randomness is pretty much the same as lawlessness), which partly dated back to the previous two centuries (Hacking, 2006),
  surely made quantum \emph{theory} possible.
 \item The randomness of variations in heritable traits that--almost simultaneously with the rise of statistical physics--were introduced in Darwin's theory of evolution by natural selection meant something completely different from Laplace etc., best expressed by the renowned geneticist Theodosius Dobzhansky a century later (cf.\ Merlin, 2010):
-\begin{quote}\begin{small}
+\begin{quote}
+\small
  Mutations are random changes because they occur independently of whether they are beneficial or harmful.
  (Dobzhansky \emph{et al}, 1977, p.\ 66).
-\end{small}\end{quote}
- Indeed, both historically and actually, the antipode to Darwin's randomness of variations  is Lamarck's goal-orientedness thereof,\footnote{ As such, Spinoza's philosophical analysis, modern physics, and (evolutionary) biology all contributed to the downfall of the Aristotelian (and subsequently Christian)  final causes my list started from. } intended to strengthen the species (like the proverbial sons of the  blacksmith who according to Lamarck inherit his strong muscles). In particular, it does not matter if the variations are of known or unknown origin, or fall under a deterministic or an indeterministic kind of physics.
+\end{quote}
+
+Indeed, both historically and actually, the antipode to Darwin's randomness of variations  is Lamarck's goal-orientedness thereof,\footnote{ As such, Spinoza's philosophical analysis, modern physics, and (evolutionary) biology all contributed to the downfall of the Aristotelian (and subsequently Christian)  final causes my list started from. } intended to strengthen the species (like the proverbial sons of the  blacksmith who according to Lamarck inherit his strong muscles). In particular, it does not matter if the variations are of known or unknown origin, or fall under a deterministic or an indeterministic kind of physics.
  \item Continuing our detour into biology,  the well-known Hardy--Weinberg equilibrium law in population genetics, which gives  the relative frequencies of alleles and genotypes in a given (infinite) population, is based on the assumption of \emph{random mating}. This means that mating takes place between pairs of individuals who have \emph{not} selected each other on the basis of their genetic traits (i.e.\ there is \emph{no} sexual selection).
  \item Eagle (2005, p.\ 775--776) proposes that `randomness is maximal \emph{un}predictability' (which agrees with criterion 3 at the end of this section), and argues that this is equivalent to 
 a random event being `probabilistically \emph{in}dependent of the current and past states of the system, given the probabilities
@@ -435,12 +440,14 @@ supported by the theory.'
   \small
   A coincidence is a surprising concurrence of events, perceived as meaningfully related, with no apparent causal connection. (Diaconis \& Mosteller, 1989,  p.\,853).
   
-  \end{quote}
+\end{quote}
+  
 The subjective nature of this definition (i.e.\ `surprising', `perceived', `meaningful', and `apparent') may  repel the scientist, but ironically, the aim of this definition is to debunk coincidences. Moreover, there is a striking similarity between analyzing
  coincidences in daily life and coincidences in the physical setting of bipartite correlation experiments \`{a} la EPR--Bohm--Bell: to this end, let me briefly recall how most if not all everyday coincidences can be nullified on the basis of the above definition:\footnote{For details see Landsman (2018), so far available in Dutch only. In practice it usually does not help to argue that the events in question were not `meaningfully related', since at that point  semi-intellectual opponents will invoke ``synchronicities" (Jung, 1952) and the like, and leave the domain of science (as Jung himself squarely admitted). 
 Even if one goes along with that, discussions tend to become circular.
 }
 \begin{enumerate}
+
 \item \emph{Against first appearances there \emph{was} a causal connection, either through a common cause or through direct causation.} This often works in daily life, and also in Bohmian mechanics, where direct (superluminal) causation is taken to be the ``explanation" of the correlations  in the experiments just referred to. However, if superluminal causation is banned, then one's hand is empty because  one interpretation of Bell's Theorem (cf.\ Appendix \ref{FWT}) excludes common causes (van Fraassen, 1991), and hence both kinds of causation are out!  See also  \S\ref{RQM}. 
 \item \emph{The concurrence of events was not at all as surprising as initially thought.} This argument is either based on the inability of most people to estimate probabilities correctly (as in the well-known  birthday problem), or, if the events were really unlikely, on
   what Diaconis and Mosteller call \emph{the law of truly large numbers}:\footnote{In a slightly different phrasing this ``law"  is also called  \emph{The Improbability Principle} (Hand, 2015).}
@@ -450,8 +457,10 @@ Even if one goes along with that, discussions tend to become circular.
 With a large enough sample, any outrageous thing is likely to happen.  (Diaconis \& Mosteller, 1989, p.\ 859).
    \end{quote}
 \end{enumerate}
-  Neither of this helps in  ERR--Bohm--Bell, though, leaving one's hand \emph{truly} empty.
+ 
+Neither of this helps in  ERR--Bohm--Bell, though, leaving one's hand \emph{truly} empty.
 \item The \emph{choice sequences} introduced by Brouwer in his intuitionistic construction of the real numbers, and then especially the ``lawless" ones (which Brouwer never defined precisely) are often associated with notions of ``freedom" and ``randomness":
+
 \begin{quote}
 
 \small
@@ -459,9 +468,11 @@ A choice sequence in Brouwer's sense is a sequence of natural numbers (to keep i
 \emph{A lawless sequence may be compared to the sequence of casts of a die}. There too, at any given stage in the generation of a sequence never more than an initial segment is known. (Troelstra, 1996,  {italics added}).\footnote{See also Troelstra (1977) and references therein to the original literature.}
 
 \end{quote}
- Indeed,  von Mises (1919) mentioned choice sequences as an inspiration for his idea of a \emph{Kollektiv}  (van Lambalgen, 1996), which in turn paved the way for the theory of algorithmic randomness to be discussed as the next and final example of this section.
+
+Indeed,  von Mises (1919) mentioned choice sequences as an inspiration for his idea of a \emph{Kollektiv}  (van Lambalgen, 1996), which in turn paved the way for the theory of algorithmic randomness to be discussed as the next and final example of this section.
  
 Nonetheless, a more precise analysis (Moschovakis, 1996, 2016) concludes as follows:
+
 \begin{quote}
 
 \small
@@ -702,7 +713,7 @@ D\"{u}rr, Goldstein, \& Zanghi (1992),  Callender (2007), Norsen (2018), and  Va
   the function \er{Bsettings} that provides the  settings.  Although $f_2$ is outside their theory,  Bohmians 
   should either account for both the ``freedom" of choosing these settings and their randomness, or stop citing Bell's Theorem  (whose proof relies on averaging over random settings) in their favour.
   
- \noindent  Bell (1985) tried to kill these two birds with the same stone by saying that the settings had to be `at least effectively free for the purpose at hand', and clarifiying this as follows: 
+Bell (1985) tried to kill these two birds with the same stone by saying that the settings had to be `at least effectively free for the purpose at hand', and clarifiying this as follows: 
 \begin{quote}
 
 \small
@@ -737,7 +748,7 @@ P_{\ps}(\al\mid a,b)=P_{\ps_{|A}}(\al\mid a),
 where $\psi_{|A}$ is the restriction of the state $\psi$ on $B(H_A\ot H_B)$ to Alice's part $B(H_A)$. Similarly, the Born probability
 $P_{\ps}(\beta\mid a,b)$ should be independent of $a$ and in fact equals $P_{\ps_{|B}}(\beta\mid b)$.
 
-\noindent However, I have repeatedly noted that the \emph{empirical} probability extracted from a long measurement outcome sequence coincides with the corresponding \emph{Born} probability only almost surely with respect to 
+However, I have repeatedly noted that the \emph{empirical} probability extracted from a long measurement outcome sequence coincides with the corresponding \emph{Born} probability only almost surely with respect to 
 the induced probability measure on the space of outcome sequences, and hence outliers violating the property \er{NS} exist (for finite sequences even with positive probability). If one such run is found, the door to superluminal signaling is  open, at least in principle.
 To see this, recall that the crudest form of determinism is what is called \emph{Predictability} by Cavalcanti \& Wiseman (2012), i.e.\ the property that 
 \beq
@@ -840,7 +851,7 @@ which roughly speaking  equates chance as subjective degree of belief (i.e.\ cre
 The Born measure is a case in point: these probabilities are \emph{theoretically given},  but have to be \emph{empirically verified} by long runs of
  independent experiments. In other words, by the results reviewed below such experiments provide numbers whose role it is to test the Born rule as a hypothesis. This is justified by \er{nuas5} in \S\ref{PP}, which equates probabilities \emph{computed} from long-run frequencies with the corresponding single-case probabilities that \emph{define} the clause ``with probability one" under which \er{nuas5} holds, and without which clause the limit in  \er{nuas5} would be undefined. 
 As explained in \S\S\ref{PP}-\ref{CAC}, the relevance of   \er{nuas5} to quantum physics comes from Theorem \ref{ET}, which I now prove. 
-\smallskip
+
 
   \emph{Proof of Theorem \ref{ET}}.
 Let $a=a^*\in B(H)$, where $H$ is a \Hs\  and $B(H)$ is the algebra of all bounded operators on $H$, and let $\sg(a)$ be the spectrum of $a$. For simplicity (and since this is enough for our applications, where $H=\C^2$) I assume $\dim(H)<\infty$, so that $\sg(a)$ simply consists of the eigenvalues $\lm_i$ of $a$ (which may be degenerate). Let us first consider a \emph{finite} number $N$ of runs of an identical measurement of $a$.
@@ -967,7 +978,7 @@ Kolmogorov's problem, which was noticed already by Laplace and perhaps even earl
  Von Mises's problem was that his definition of a random sequence (called a \emph{Kollektiv}), despite his great insights, simply did not work. Back to binary sequences, his 
  notion of randomness was supposed to guarantee the existence of limiting relative frequencies (which in turn should define the corresponding single-case probabilities), but of course he understood that a sequence like $01010101\cdots$ is not very random at all. His idea was that  limiting relative frequencies should exist not only for the given sequence, but also for all its permutations defined by so-called \emph{place-selection functions}, which he tried to find (in vain) by precluding successful gambling strategies on the digits of the sequence.
  
-\noindent  Of the three equivalent definitions of 1-randomness  already mentioned in \S\ref{RFR}, namely:
+Of the three equivalent definitions of 1-randomness  already mentioned in \S\ref{RFR}, namely:
   \begin{center}
 \emph{Incompressibility}; \hspace{1.5cm}
  \emph{Patternlessness};\hspace{1.5cm} 
@@ -1183,10 +1194,11 @@ The assumptions imply the existence of a coloring $C_{\lm}: \mathcal{P}\raw\{0,1
 $\CP\subset S^2$ consist of all unit vectors contained in all bases in $S$, and $\lm$ ``goes along for a free ride". Indeed, one finds
 $C_{\lm}(\vec{e})=\til{L}(\vec{e},\lm)$. The point, then, is that on a suitable choice of the set $S$ such a coloring cannot exist. 
 }
-\smallskip
 
-\noindent Bell's (1964) Theorem and the Free Will Theorem both take a similar generic form, namely:
-    \begin{theorem}\label{FWTthm}
+
+Bell's (1964) Theorem and the Free Will Theorem both take a similar generic form, namely:
+
+\begin{theorem}\label{FWTthm}
 Determinism, Nature, (Hidden) Locality, and Freedom,   are contradictory.
 \end{theorem}
 Once again, I have to explain what these terms exactly mean in the given context. 
@@ -1250,9 +1262,9 @@ This concludes the joint statement of the Free Will Theorem and Bell's (1964) Th
 For our purposes these theorems are equivalent, despite subtle differences in their assumptions. Bell's Theorem is much more robust in that it does not rely on perfect correlations (which are hard to realize experimentally), and in addition it requires almost no input from quantum theory.
 On the other hand,  Bell's Theorem uses  probability theory in a highly nontrivial way: like the hidden variable theories it is supposed to exclude it relies on the possibility of fair sampling of the probability measure $\mu$. The 
   factorization condition defining probabilistic independence passes this requirement of fair sampling on to both the hidden variable and the settings, which brings us back to the discussion in \S\ref{CAC}. 
- \smallskip
  
- \noindent All trusting \emph{Nature},  different parties may now be identified by the assumption they drop:
+All trusting \emph{Nature},  different parties may now be identified by the assumption they drop:
+
  \begin{itemize}
 \item Following Copenhagen \qm, most physicists reject \emph{Determinism};
 \item Bohmians reject  \emph{(Hidden) Locality};
