fix up gr-qc-0308048

--- a/gr-qc-0308048/valdivia0409.tex
+++ b/gr-qc-0308048/valdivia0409.tex
@@ -19,8 +19,9 @@ bookmarksnumbered=true,
 bookmarksopenlevel=10
 }
 %\usepackage{amssymb}
+\usepackage[noBBpl,sc]{mathpazo}
 \linespread{1.05}
-\usepackage[papersize={6.9in, 10in}, left=.5in, right=.5in, top=1in, bottom=1in]{geometry}
+\usepackage[papersize={7.1in, 10in}, left=.5in, right=.5in, top=1in, bottom=1in]{geometry}
 %\usepackage[letterpaper, margin=1.2in]{geometry}
 \tolerance=2000
 \hbadness=2000
@@ -28,6 +29,7 @@ bookmarksopenlevel=10
 
 \input{../helpers/fix-underbrace.tex}
 %\input{../helpers/psu-sc-headers.tex}
+\input{../helpers/cmrsum}
 
 \usepackage{cite}
 
@@ -543,12 +545,12 @@ is selected if we require that the state $|0\ra$ be the
 ground state of the Hamiltonian. Let us see how this comes about.
 
 For a general $f$ we have
-\bea
-H&=&\half m \dot{x}^2 + \half m\o^2 x^2\\
-&=&\half m\left[(\dot{f}^2 +\o^2f^2) aa+(\dot{f}^2 +\o^2f^2)^*\ad \ad
-+(|\dot{f}|^2 +\o^2|f|^2)(a\ad + \ad a)\right]\!.
+\begin{align}
+H&=\half m \dot{x}^2 + \half m\o^2 x^2\\
+&=\half m\big[(\dot{f}^2 +\o^2f^2) aa+(\dot{f}^2 +\o^2f^2)^*\ad \ad
++(|\dot{f}|^2 +\o^2|f|^2)(a\ad + \ad a)\big].
 \label{ham1}
-\eea
+\end{align}
 Thus
 \beq
 H|0\ra=\half m(\dot{f}^2 +\o^2f^2)^*\ad \ad|0\ra
@@ -654,16 +656,18 @@ transformation of the metric:
 %
 which induces the changes
 %
-\beq \widetilde{g}^{\m\n}=\Omega^{-2}(x){g}^{\m\n},\qquad
-|\widetilde{g}|^{1/2}=\Omega^D(x)|{g}|^{1/2},\qquad
+\beq \widetilde{g}^{\m\n}=\Omega^{-2}(x){g}^{\m\n},\quad
+|\widetilde{g}|^{1/2}=\Omega^D(x)|{g}|^{1/2},\quad
 |\widetilde{g}|^{1/2} \widetilde{g}^{\m\n} =\Omega^{D-2}(x)
 |{g}|^{1/2}{g}^{\m\n}, 
 \eeq
-%
-%
-\beq \widetilde{R}=\widetilde{g}^{\m\n}\widetilde{R}_{\m\n}=\Omega^{-2}\Bigl({R}-
-2(D-1)\Box\ln\Omega-
-(D-1)(D-2)g^{\a\b}(\ln \Omega)_{,\a}(\ln\Omega)_{,\b}\Bigr). \eeq
+
+\noindent
+and
+\begin{multline} \widetilde{R}=\widetilde{g}^{\m\n}\widetilde{R}_{\m\n}=\Omega^{-2}\Bigl({R}-
+2(D-1)\Box\ln\Omega -
+(D-1)(D-2)g^{\a\b}(\ln \Omega)_{,\a}(\ln\Omega)_{,\b}\Bigr).
+\end{multline}
 %
 In $D=2$ dimensions, the action is simply invariant in the
 massless, minimally coupled case without any
@@ -722,7 +726,7 @@ of the harmonic oscillator, one can form a conserved bracket
 from two complex solutions to the scalar wave equation
 (\ref{scalareom}),
 %
-\beq \la f,g\ra=\int_\S d\S_\m\; j^\m, \qquad\qquad
+\beq \la f,g\ra=\int_\S d\S_\m\; j^\m, \qquad
 j^\m(f,g)=(i/\hbar)|g|^{1/2}g^{\m\n}\Bigl(\overline{f}\p_\n g -
 (\p_\n \overline{f})g\Bigr).\label{KGip}\eeq
 %
@@ -779,7 +783,7 @@ holds for all solutions $f$ and $g$, then the canonical
 commutation relation holds. Using (\ref{ad(f)}), we immediately
 obtain the similar relations
 %
-\beq [a(f),a(g)]=-\la f,\overline{g}\ra,\qquad\qquad
+\beq [a(f),a(g)]=-\la f,\overline{g}\ra,\qquad
 [\ad(f),\ad(g)]=-\la \overline{f},g\ra \label{aacomm}\eeq
 %
 
