--- a/QFTCS_course/QFTCS_course copy.tex
+++ b/QFTCS_course/QFTCS_course copy.tex
@@ -81,8 +81,10 @@ pdfproducer = {LyX + LaTeX with hyperref package + dvips + ps2pdf},
 \usepackage{babel}
 \makeatother
 
-\usepackage[papersize={7.4in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\usepackage[papersize={7.0in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
 \input{../helpers/cmrsum}
+\sloppy
+\raggedbottom
 
 \begin{document}
 
