--- a/QFTCS_course/QFTCS_course copy.tex
+++ b/QFTCS_course/QFTCS_course copy.tex
@@ -60,7 +60,6 @@
 % note: if the following two lines are uncommented, pdflatex stops working; if they are commented, there are no hyperlinks.
 % To produce a PDF file with hyperlinks, export to PS and execute ps2pdf. Drawback: formulae are badly antialiased in Acroread 5.
 \usepackage[hyperindex,%
-dvips,
 %pdftex,%
 bookmarks,bookmarksnumbered,%
 plainpages=false,pdfpagelabels,%this fixes problems with roman-numbered pages (e.g. ii,iv
@@ -82,7 +81,9 @@ pdfproducer = {LyX + LaTeX with hyperref package + dvips + ps2pdf},
 \makeatother
 
 \usepackage[papersize={7.0in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\linespread{1.1}
 \input{../helpers/cmrsum}
+
 \sloppy
 \raggedbottom
 
