--- a/gr-qc-0010055/bh-evaporation-notes.tex
+++ b/gr-qc-0010055/bh-evaporation-notes.tex
@@ -229,7 +229,7 @@ A black hole is a region in an asymptotically flat spacetime which is not
 contained in the
 past of future null infinity $\finf$.  The horizon is the
 boundary between the black hole and the outside, asymptotically flat region.
-In section (6) we will study a black hole in a spacetime which is not
+In section (\ref{section6}) we will study a black hole in a spacetime which is not
 asymptotically flat using an obvious generalization of the definition.
 The horizon is a null surface. Physically, it is the outer boundary of the
 black hole on which
@@ -239,7 +239,7 @@ to null infinity.
 
 Classical black hole mechanics can be summarized in following three basic
 theorems, where the
-necessary symbols are defined in section (4) below.
+necessary symbols are defined in section (\ref{section4}) below.
 
 \begin{enumerate}
 \item The zeroth law states that the surface gravity $\kappa$ of a black hole is
@@ -317,6 +317,7 @@ account the quantum mechanical nature of matter fields in the spacetime.
 
 
 \section{Quantum Fields in Curved Spacetimes}
+\label{qftcs}
 
 \vskip 0.1in\noindent
 {\it The Basic Idea of Particle Production}
@@ -594,7 +595,7 @@ The standard quantum field theory choice for the positive
 frequency modes of a massless field are the functions $\psi (x,t)\sim
 e^{-i\omega (t\pm x)}$.
 Rindler spacetime is the wedge region I of Minkowski spacetime, shown in
-figure (2), that is covered
+figure (\ref{f2}), that is covered
 by the coordinate patch
 %
 \be\label{rinmetric}ds^2 =e^{2a\xi }(-dT^2 +d\xi ^2) =-e^{a(v-u)} dudv\ee
@@ -797,6 +798,8 @@ which is a black body or thermal spectrum, with temperature
 %
 
 \section{Black Holes}
+\label{section4}
+
 A stationary black hole spacetime\begin{footnote}
 {This will not be a comprehensive introduction
 to black holes! See, {\it e.g.} \cite{wald} for details, proofs, and
@@ -907,7 +910,7 @@ solutions $\phi _{\omega lm}$ are plane waves in $t\pm r*$, {\it i.e.}
 plane waves in $u,v$.
 These solutions to the wave equation will be used to define the bases for
 the Hilbert
-space of states. For notational simplicity, as in section (2), we will
+space of states. For notational simplicity, as in section (\ref{qftcs}), we will
 supress the $l,m$
 subscripts in the following calculations.
 
@@ -956,7 +959,7 @@ and the black hole forms.}
 
 There is no white hole horizon in the collapse spacetime,  since
 $\ph $ is replaced by the interior of the collapsing star. From the
-conformal diagram in figure (4), one sees that $\pinf$ is a Cauchy surface.
+conformal diagram in figure (\ref{f4}), one sees that $\pinf$ is a Cauchy surface.
 In order to choose a set of basis functions that define particle states in the
 far past, one must choose a time coordinate with which to define positive
 frequency oscillations on $\pinf$.  We will take the the early time positive
@@ -1087,7 +1090,7 @@ Given this choice of boundary conditions, the wave propagates backwards in
 time, and the collapsing star geometry sets the natural definitions
 of positive and negative frequency in the far past.
 
-In section (6), we will compute black hole radiation in the extended, eternal
+In section (\ref{section6}), we will compute black hole radiation in the extended, eternal
 Schwarzschild spacetime with a particular choice of positive frequency on $\ph$.
 This choice is dictated by the results in the collapsing black hole calculation.
 Importantly,
@@ -1095,7 +1098,7 @@ learning what choice to make for positive frequency modes on
 horizons allows one to extend the calculation of Hawking radiation to black
 holes
 in spacetimes that are not asymptotically flat \cite{ktrnds}.  We will outine
-one such calculation in section (6).
+one such calculation in section (\ref{section6}).
 
 \vskip 0.1in\noindent
 {\it The Calculation}
@@ -1106,7 +1109,7 @@ one such calculation in section (6).
 goes from $\finf$ along a geodesic $u=u_1$
 passing close to the black hole horizon $\fh$. The ray passes through the
 collapsing star and then propagates out to $\pinf$ along a geodesic $v=v_1$,
-which is close to $v=v_0$. The ray $v=v_0$, shown in figure (4), is the
+which is close to $v=v_0$. The ray $v=v_0$, shown in figure (\ref{f4}), is the
 last inward
 propagating ray on the surface of the star that reaches $\finf$. Inward
 propagating rays
@@ -1277,7 +1280,7 @@ can spindown via Hawking radiation and also discharge, if there are fields
 which carry the same kind of charge as the black hole.
 Another generalization of interest is to black branes in higher dimensions,
 which are important in string theory and will be discussed briefly below in
-section (7).
+section (\ref{s7}).
 
 In the preceeding calculation, the spacetime metric was fixed. Even though
 we don't have a quantum theory of gravity to determine how
@@ -1327,16 +1330,17 @@ that a black hole with $M>Q$ evaporates down to $M=Q$, at which point the
 evaporation stops.
 We will return to this picture in connection with the positive mass
 theorems for black
-holes, and quantum mechanical ground states in  string theory in section (7).
+holes, and quantum mechanical ground states in  string theory in section (\ref{s7}).
 
 \section{Extended Schwarzchild and Reissner-Nordstrom deSitter Spacetimes}
+\label{section6}
 
 \vskip 0.1in\noindent
 {\it Extended Schwarzchild}
 \vskip 0.05in
 
 In the extended Schwarzchild spacetime, also known as the eternal black hole,
-shown in figure (3), one basis
+shown in figure (\ref{f3}), one basis
 consists of the modes $\{\f,\j\}$ with boundary conditions specified on
 $\pinf$ and $\ph$ respectively.  A
 second basis consists of the modes $\{ \p ,\q \}$ with boundary conditions
@@ -1414,7 +1418,7 @@ are indicated.}
 
 
 The conformal diagram for the
-relevant portion of RNdS is shown in figure (5). The region is bounded
+relevant portion of RNdS is shown in figure (\ref{f5}). The region is bounded
 by the white hole, black hole, past and future deSitter horizons.
 Following the discussion for the extended Schwarzchild spacetime, we
 define positive frequency on each of these horizons by a Kruskal-type
@@ -1561,6 +1565,8 @@ the coefficients $\awwp$ approach those for a Schwarzschild black hole in
 this limit.
 
 \section{Black Hole Evaporation and Positive Mass Theorems}
+\label{s7}
+
 We close  by pointing out a connection, between classical
 positive mass theorems in general relativity and lowest energy states
 in string theory, which is made via Hawking evaporation.
@@ -1604,7 +1610,7 @@ the higher mass states will evaporate to the ground state by emission
 of quantum particles and that therefore BPS spacetimes are quantum
 mechanically stable.
 
-Briefly,let's see what this looks like in string theory.
+Briefly, let's see what this looks like in string theory.
 In string theory, two desciptions of states arise.
 In perturbative string theory there is a Fock space of states
 for a 1+1 dimensional superconformal field theory. This is defined on
