--- a/gr-qc-0010055/bh-evaporation-notes.tex
+++ b/gr-qc-0010055/bh-evaporation-notes.tex
@@ -648,7 +648,7 @@ singularities. The dashed line above is the  origin of radial coordinates.}
 \vskip 0.05in
 
 To highlight the similiarities, we will call the Rindler horizons $\ph$
-and $\fh$, in analogy with an eternal black hole.
+and $\fh\!$, in analogy with an eternal black hole.
 First, let's define the relevant  positive and negative
 frequency modes, and then turn to the issue of normalization. One basis
 for the space of solutions to the scalar wave equation (\ref{wave}) in the
@@ -662,7 +662,7 @@ $\j{}^*$ given by
 The functions $\f$ are positive frequency inward propagating modes, while
 the functions
 $\j$ give positive frequency outward propagating modes. These modes are
-normalized with respect to the inner product (\ref{innprod}) .
+normalized with respect to the inner product (\ref{innprod}).
 One expansion for the scalar field $\phi$ is then
 %
 \be\label{rinphi}\phi = \int d\omega (  \a \f + \a^{\dagger} \f{}^*  +
@@ -724,7 +724,7 @@ however each mode is not square integrable. To get a finite result for a
 particle production calculation, one needs to form square-integrable wave
 packets.
 Let $F_{\omega}(\ub ,\vb )$ be the solution to the wave equation which is
-equal to  a specified positive frequency wave packet on $\pinf$,
+equal to  a specified positive frequency wave packet on $\pinf\!$,
 %
 \be\label{packet}F_{\omega}\rightarrow \int d\nu W(\nu -\omega )f_{\nu}
 (\vb ),\qquad
@@ -732,8 +732,8 @@ equal to  a specified positive frequency wave packet on $\pinf$,
 %
 Here $W(x)$ is a ``window function" that is
 peaked about the origin and chosen such that the packet is peaked
-about $\vb$ near $\pinf$. In particular, the function $F_{\omega}$ vanishes
-on $\fh$.
+about $\vb$ near $\pinf\!$. In particular, the function $F_{\omega}$ vanishes
+on $\fh\!$.
 Rather than introducing corresponding new notation for all the modes, we
 will indicate the
 places in the calculations where it is necessary to sum up the plane wave
@@ -741,7 +741,7 @@ modes to make
 normalizable states $F,J,Q,P$.
 
 In the black hole calculation, boundary conditions on the
-scalar field $\phi$ are set on $\pinf$, so we will proceed analogously here.
+scalar field $\phi$ are set on $\pinf\!$, so we will proceed analogously here.
 Given a positive frequency, outward propagating Rindler wave packet on $\finf$,
 one wants to solve the wave equation to find the form of the wave packet in
 the far past.
@@ -750,10 +750,10 @@ parts with respect
 to the Rindler coordiante $v$. The calculation is most simply carried out
 mode by mode, {\it i.e.} for $\phi \rightarrow  e^{-i\omega u}$ on $\finf$.
 In the
-Rindler wedge, the past boundary is $\ph$ plus $\pinf$. Because spacetime
+Rindler wedge, the past boundary is $\ph$ plus $\pinf\!$. Because spacetime
 is flat, there is
 no scattering of the scalar field $\phi$. Therefore, the wave packet above
-propagates from $\finf$ to $\ph$, and none reaches $\pinf$.  The particle
+propagates from $\finf$ to $\ph\!$, and none reaches $\pinf\!$.  The particle
 production comes
 solely from the change of basis, {\it i.e.} from different definitions of time.
 
@@ -768,7 +768,7 @@ as in (\ref{bogtwo})
 \be\label{rinbog} \alp = (\p ,j_{\omega '} )_{\ph}  ,\qquad
 \bet=  -i\alpha_{\omega ,-\omega '},\ee
 %
-where the first integral is taken over the past Cauchy horizon $\ph$.
+where the first integral is taken over the past Cauchy horizon $\ph\!$.
 The mode functions satisfy  $\partial_{\ub}\p{}^* =(i\omega / a \ub)\p $,
 so that
 %
@@ -845,7 +845,7 @@ $r=0$.
 Regions I and III are
 asymptotically flat, Region II is the black hole, and Region IV is the
 white hole.
-For an observer in Region I,$\fh$ is the (future) black hole horizon and $\ph$
+For an observer in Region I, $\fh$ is the (future) black hole horizon and $\ph$
 is the past black hole, or white hole, horizon. $(U,V)$ are the Kruskal
 coordinates.}
 \label{f3}
@@ -883,7 +883,7 @@ One finds that the Schwarzschild  coordinates (\ref{schw}) actually only
 cover part of the
 manifold, but that the Kruskal coordinates cover the extended  spacetime.
 These features of the geometry are diplayed in the conformal (or Penrose)
-diagrams, figures (2) and (3).
+diagrams, figures (\ref{f2}) and (\ref{f3}).
 
 Finally, we will look at solutions to the scalar wave equation in the
 Schwarzchild geometry.  Writing $\phi$ as the product
@@ -932,9 +932,9 @@ Hawking \cite{hawking}  originally did the calculation of particle emission
 for a black hole that is formed by gravitational collapse. In
 the far past, the spacetime is nearly Minkowski, the largest gravitational
 effects being at the surface of the star, and we can assume that the
-quantum state is empty of {\it in}-particles near $\pinf$.
+quantum state is empty of {\it in}-particles near $\pinf$\!.
 We will call this state $\vac$.
-The star collapses to form a black hole.  Hawking found that near $\finf$,
+The star collapses to form a black hole.  Hawking found that near $\finf\!$,
 the state $\vac$
 contains a thermal flux of {\it out}-particles. The particles produced are
 known as Hawking
@@ -958,11 +958,11 @@ and the black hole forms.}
 
 
 There is no white hole horizon in the collapse spacetime,  since
-$\ph $ is replaced by the interior of the collapsing star. From the
+$\ph$ is replaced by the interior of the collapsing star. From the
 conformal diagram in figure (\ref{f4}), one sees that $\pinf$ is a Cauchy surface.
 In order to choose a set of basis functions that define particle states in the
 far past, one must choose a time coordinate with which to define positive
-frequency oscillations on $\pinf$.  We will take the the early time positive
+frequency oscillations on $\pinf\!$.  We will take the the early time positive
 frequency modes to be the solutions $\f$ to the wave equation that
 behave near $\pinf$ like
 %
@@ -973,7 +973,7 @@ an ingoing null coordinate for the flat space wave equations. Therefore,
 this choice of
 positive frequency modes corresponds to the usual Minkowski particle
 states. Note that
-$v$ is the affine parameter for the null geodesic generators of $\pinf$.
+$v$ is the affine parameter for the null geodesic generators of $\pinf\!$.
 
 Define creation and annihilation operators $\ad$, $\a$ for these, as in
 (\ref{basis}), via
@@ -988,10 +988,10 @@ The vacuum is then taken to satisfy
 for all $\omega>0$.
 Note that this state is annhilated by the $\a$ at all times. The label
 {\it in} refers to the fact that the
-boundary conditions on the modes $\f$ are fixed on $\pinf$.
+boundary conditions on the modes $\f$ are fixed on $\pinf\!$.
 
 In order to define a complete set of particle states at late times, we must
-define modes on both $\finf$ and $\fh$, because $\finf$ itself is not a Cauchy
+define modes on both $\finf$ and $\fh\!$, because $\finf$ itself is not a Cauchy
 surface. On $\finf$ we take the {\it out}-states to be solutions
 to the wave equation with boundary conditions that on $\finf$
 %
@@ -1007,7 +1007,7 @@ states on $\fh$
 and it's extension through the collapsing matter. Here we cannot
 make a choice based on a flat spacetime limit. One
 approach to this problem is as follows \cite{hawking}.  Choose any set of modes
-$\q$ that are well behaved on $\fh$. The choice of quantum state $\vac$
+$\q$ that are well behaved on $\fh\!$. The choice of quantum state $\vac$
 implies that at early times, the density matrix\begin{footnote}{The density
 matrix
 formulation of quantum mechanics is a generalization of the standard
@@ -1034,7 +1034,7 @@ matrix $\rho ^{red} \equiv Tr_{\{q\}}\,\rho$ as
 The reduced density matrix,
 $\rho ^{red}$, is the same for all bases related by unitary transformations
 to the chosen basis. Therefore $\langle O^{AF} \rangle$ is independent of the choice of modes
-$\q$ on the black hole horizon $\fh$.
+$\q$ on the black hole horizon $\fh\!$.
 
 Therefore, the scalar field $\phi$ can also be expanded in the {\it out}-basis,
 %
@@ -1091,7 +1091,7 @@ time, and the collapsing star geometry sets the natural definitions
 of positive and negative frequency in the far past.
 
 In section (\ref{section6}), we will compute black hole radiation in the extended, eternal
-Schwarzschild spacetime with a particular choice of positive frequency on $\ph$.
+Schwarzschild spacetime with a particular choice of positive frequency on $\ph\!$.
 This choice is dictated by the results in the collapsing black hole calculation.
 Importantly,
 learning what choice to make for positive frequency modes on
@@ -1107,25 +1107,25 @@ one such calculation in section (\ref{section6}).
 \begin{enumerate}
 \item The mode (\ref{outmodes})  propagates along a path $\gamma$ that
 goes from $\finf$ along a geodesic $u=u_1$
-passing close to the black hole horizon $\fh$. The ray passes through the
+passing close to the black hole horizon $\fh\!$. The ray passes through the
 collapsing star and then propagates out to $\pinf$ along a geodesic $v=v_1$,
 which is close to $v=v_0$. The ray $v=v_0$, shown in figure (\ref{f4}), is the
 last inward
 propagating ray on the surface of the star that reaches $\finf$. Inward
 propagating rays
 with  $v>v_o$ enter the black hole. In the extended spacetime $v=v_o$ would be
-the white hole horizon $\ph$.
+the white hole horizon $\ph\!$.
 
 \item The ray $\gamma$ is connected to $\fh$ and $v=v_o$ by
 a geodesic deviation vector $\epsilon n^a$ with $\epsilon $ small and
 positive. On the
-part of the path that passes close to $\fh$, $n^a$ is tangent to a null
+part of the path that passes close to $\fh\!$, $n^a$ is tangent to a null
 geodesic which is
-ingoing at $\fh$. The normalization is fixed by the condition $n^a l_a
+ingoing at $\fh\!$. The normalization is fixed by the condition $n^a l_a
 =-1$, where
-$l^a$ is a null geodesic generator of $\fh$.
+$l^a$ is a null geodesic generator of $\fh\!$.
 
-\item Let $p^a$ be tangent to an ingoing null geodesic at $\fh$,
+\item Let $p^a$ be tangent to an ingoing null geodesic at $\fh\!$,
 $p^a = {du\over d\lambda}{\partial \over \partial u}$. Note that $p^a$ is
 parallel to $n^a$ and therefore satisfies
 %
@@ -1141,9 +1141,9 @@ Kruskal coordinate defined in (\ref{coordtrans}).  This expression will be
 useful below.
 For the Schwarzchild case, $\kappa =1/4M$, but the relation (\ref{affine})
 will generalize to
-other cases as well. The affine parameter $\lambda =0$ on $\fh$.
+other cases as well. The affine parameter $\lambda =0$ on $\fh\!$.
 
-\item The affine parameter is a good coordinate near $\fh$, while $u$ is not.
+\item The affine parameter is a good coordinate near $\fh\!$, while $u$ is not.
 So the
 deviation vector connects the two null geodesics, the horizon at $\lambda
 =0$ and
@@ -1163,7 +1163,7 @@ vector in point (2) above.  Equations (\ref{difference})  and
 %
 
 \item Next, we trace the ray $\gamma$ through the collapsing star, and back
-to $\pinf$. In the conformal diagram, the ray bounces off the origin
+to $\pinf\!$. In the conformal diagram, the ray bounces off the origin
 of coordinates and follows a null geodesic of constant $v <v_0$, which is
 near $v=v_0$. The two geodesics are still connected by $\epsilon n^a$. Since
 spacetime is approximately flat on this part of $\gamma$, we
@@ -1179,7 +1179,7 @@ reflected rather than continued.  Note that the signs are consistent
 through the chain of equalities in (\ref{changev}).  I would like to thank the
 students in my $1999$ General Relativity class for patiently helping to sort out
 the signs.}\end{footnote}
-on $\pinf$.
+on $\pinf\!$.
 \end{enumerate}
 
 Equation (\ref{changev}) is the desired relation between $u$ and $v$.
@@ -1194,7 +1194,7 @@ e^{i{\omega \over\kappa}ln ({v_0 -v \over C^2})},\qquad    v<v_0 \\
 \eena
 %
 The wave vanishes for $v>v_0$ because it would have had to come out
-of the black hole horizon to reach this part of $\pinf$.  Proceeding as
+of the black hole horizon to reach this part of $\pinf\!$.  Proceeding as
 before, one finds
 the expressions for the Bogolyubov coefficients
 %
@@ -1235,12 +1235,12 @@ with $\kappa =1/ 4\pi$  for Schwarzschild.
 
 The coefficient $\Gamma$ entered in our discussion of normalized wave packets,
 as the portion of the wave which propagates close to the horizon, through
-the colllapsing star, and back out to $\pinf$. This is almost identical
+the colllapsing star, and back out to $\pinf\!$. This is almost identical
 to the fraction which would propagate into the white hole horizon $\ph$
 if we were working in the extended spacetime, rather than the gravitational
 collapse case. But this in turn is equal to the fraction of a wave
 which is absorbed by the black hole horizon $\fh$ for a wave which starts
-at $\pinf$. So $\Gamma _{\omega}$ is just the classical absorption coefficient
+at $\pinf\!$. So $\Gamma _{\omega}$ is just the classical absorption coefficient
 for scattering a classical scalar field off a black hole.  Direct
 calculation gives
 %
@@ -1365,7 +1365,7 @@ choices of $(u,v)$ at null infinity.  We then have
 %
 To find the Bogolyubov coefficients $\alp$, the computation in
 (\ref{bhalp})  is replaced by
-an integral over $\ph$, as was done for the Rindler spacetime in
+an integral over $\ph\!$, as was done for the Rindler spacetime in
 (\ref{rinbog}).
 The integral is then the same as in equations (\ref{rinalp})  and
 (\ref{bhalp}), and the thermal
